# audio-detection

./: .gitignore  checklist.md  fine-tuning-implementation.md  instructions.md  main.py  pyproject.toml
outputs/vad/: sample_001.json
src/: debug_utils.py  optimizer.py  preflight.ipynb  vad.py  whisper.ipynb
src/fine-tuning/: fine-tuning.ipynb
src/sts-pipeline/: sts-starter.ipynb
src/tts/: tts-intro.ipynb
