[project]
name = "audio-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "faster-whisper>=1.2.1",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "noisereduce>=3.0.3",
    "numpy>=2.4.6",
    "scipy>=1.18.0",
    "sentencepiece>=0.2.1",
    "soundfile>=0.14.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "webrtcvad>=2.0.10",
]
