[project]
name = "audio-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "datasets[audio]>=5.0.0",
    "evaluate>=0.4.6",
    "faster-whisper>=1.2.1",
    "ipykernel>=7.3.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "noisereduce>=3.0.3",
    "numpy>=2.4.6",
    "scipy>=1.18.0",
    "sentencepiece>=0.2.1",
    "soundfile>=0.14.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "transformers>=5.12.1",
    "webrtcvad>=2.0.10",
    "torchcodec>=0.14.0",
    "tensorboard>=2.21.0",
    "huggingface-hub>=1.21.0",
]
 

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
